# HRMSPROJECT

./: # Code Citations.md  # Document Title.md  ## GitHub Copilot Chat.md  .GITATTRIBUTES  .gitignore  .pre-commit-config.yaml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HRMSPROJECT.sln  HRMSProject.vcxproj  INSTALL.vcxproj  README.md  RUN_TESTS.vcxproj  SECURITY.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.js  app.py  config.json  directory_structure.txt  gmock.sln  gmock.vcxproj  gmock_main.vcxproj  googletest-distribution.sln  gtest.sln  gtest.vcxproj  gtest_main.vcxproj  install_gradle.ps1  install_static_files.py  installer.nsi  main.cpp  manage.py  package-lock.json  package.json  pull_request_template.md  pyrightconfig.json  (+8 more)
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Debug/: HRMSPROJECT.exe.recipe  HRMSPROJECT.ilk
HRMSPROJECT/: _compat.py  compat.py  pre-commit  requirements.txt  settings.py  urls.py  version.py  wsgi.py
MyCppProject/: CMakeLists.txt  build.bat  main.cpp
hrms/: # Code Citations.md  context_processors.py  models.py  urls.py  views.py
hrms_app/: 0001_initial.py  0002_alter_businesscustomization_user_alter_user_groups_and_more.py  0002_auto_YYYYMMDD_HHMM.py  BdfFontFile.py  BlpImagePlugin.py  BmpImagePlugin.py  BufrStubImagePlugin.py  ContainerIO.py  DdsImagePlugin.py  EpsImagePlugin.py  FontFile.py  GdImageFile.py  GifImagePlugin.py  GimpGradientFile.py  GraphUtil.py  (+457 more)
(+58 files in other folders)
